kubernetes.yml
# eureka-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: eureka
  labels:
    app: web
    name: eureka-server
spec:
  containers:
    - name: eureka-server
      image: momipochi/java-microservice-eurekaserver
      ports:
        - containerPort: 8761

---
# demo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo
  labels:
    app: web
    name: demo-service
spec:
  containers:
    - name: demo-service
      image: momipochi/java-microservice-demo
      ports:
        - containerPort: 8081
      

---
# apigateway-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: apigateway
  labels:
    app: web
    name: apigateway
spec:
  containers:
    - name: apigateway
      image: momipochi/java-microservice-apigateway
      ports:
        - containerPort: 8083

---
apiVersion: v1
kind: Service
metadata:
  name: eureka-service
spec:
  selector:
    app: eureka-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
